--- a/v/latest/index.html
+++ b/v/latest/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
   <meta name="author" content="Amirthavarshini Muraleetharan" />
   <meta name="author" content="Thomas Ngare" />
-  <meta name="author" content="Thomas Ngare" />
-  <meta name="dcterms.date" content="2022-09-06" />
+  <meta name="author" content="Kapil Shah" />
+  <meta name="dcterms.date" content="2022-09-08" />
   <meta name="keywords" content="markdown, publishing, manubot" />
   <title>Transportation Planning</title>
   <style>
@@ -112,8 +112,8 @@
   <meta name="citation_title" content="Transportation Planning" />
   <meta property="og:title" content="Transportation Planning" />
   <meta property="twitter:title" content="Transportation Planning" />
-  <meta name="dc.date" content="2022-09-06" />
-  <meta name="citation_publication_date" content="2022-09-06" />
+  <meta name="dc.date" content="2022-09-08" />
+  <meta name="citation_publication_date" content="2022-09-08" />
   <meta name="dc.language" content="en-US" />
   <meta name="citation_language" content="en-US" />
   <meta name="dc.relation.ispartof" content="Manubot" />
@@ -128,8 +128,8 @@
   <meta name="citation_author_institution" content="UIUC" />
   <meta name="citation_author_orcid" content="XXXX-XXXX-XXXX-XXXX" />
   <meta name="twitter:creator" content="@johndoe" />
-  <meta name="citation_author" content="Thomas Ngare" />
-  <meta name="citation_author_institution" content="UIUC" />
+  <meta name="citation_author" content="Kapil Shah" />
+  <meta name="citation_author_institution" content="Civil and Environmental Engineering Department" />
   <meta name="citation_author_institution" content="UIUC" />
   <meta name="citation_author_orcid" content="XXXX-XXXX-XXXX-XXXX" />
   <link rel="canonical" href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/" />
@@ -138,9 +138,9 @@
   <meta name="citation_fulltext_html_url" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/" />
   <meta name="citation_pdf_url" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/manuscript.pdf" />
   <link rel="alternate" type="application/pdf" href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/manuscript.pdf" />
-  <link rel="alternate" type="text/html" href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/4b4924fd928f54402523014b6ec1638889ef108c/" />
-  <meta name="manubot_html_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/4b4924fd928f54402523014b6ec1638889ef108c/" />
-  <meta name="manubot_pdf_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/4b4924fd928f54402523014b6ec1638889ef108c/manuscript.pdf" />
+  <link rel="alternate" type="text/html" href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/1959f21832fdf9c16643b27cbd30b4d5068f2367/" />
+  <meta name="manubot_html_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/1959f21832fdf9c16643b27cbd30b4d5068f2367/" />
+  <meta name="manubot_pdf_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/1959f21832fdf9c16643b27cbd30b4d5068f2367/manuscript.pdf" />
   <meta property="og:type" content="article" />
   <meta property="twitter:card" content="summary_large_image" />
   <link rel="icon" type="image/png" sizes="192x192" href="https://manubot.org/favicon-192x192.png" />
@@ -161,10 +161,10 @@
 </header>
 <p><small><em>
 This manuscript
-(<a href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/4b4924fd928f54402523014b6ec1638889ef108c/">permalink</a>)
+(<a href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/1959f21832fdf9c16643b27cbd30b4d5068f2367/">permalink</a>)
 was automatically generated
-from <a href="https://github.com/uiceds/cee-492-term-project-fall-2022-jakt/tree/4b4924fd928f54402523014b6ec1638889ef108c">uiceds/cee-492-term-project-fall-2022-jakt@4b4924f</a>
-on September 6, 2022.
+from <a href="https://github.com/uiceds/cee-492-term-project-fall-2022-jakt/tree/1959f21832fdf9c16643b27cbd30b4d5068f2367">uiceds/cee-492-term-project-fall-2022-jakt@1959f21</a>
+on September 8, 2022.
 </em></small></p>
 <h2 id="authors">Authors</h2>
 <ul>
@@ -190,13 +190,14 @@ Department of Civil and Environmental Engineering, University of Illinois, Urban
 UIUC
 · Funded by Grant XXXXXXXX
 </small></p></li>
-<li><p><strong>Thomas Ngare</strong><br>
+<li><p><strong>Kapil Shah</strong><br>
 <img src="images/orcid.svg" class="inline_icon" alt="ORCID icon" />
 <a href="https://orcid.org/XXXX-XXXX-XXXX-XXXX">XXXX-XXXX-XXXX-XXXX</a>
 · <img src="images/github.svg" class="inline_icon" alt="GitHub icon" />
-<a href="https://github.com/thomasNg">thomasNg</a><br>
+<a href="https://github.com/kapilrs2">kapilrs2</a><br>
 <small>
-UIUC; UIUC
+Civil and Environmental Engineering Department; UIUC
+· Funded by Grant XXXXXXX
 </small></p></li>
 </ul>
 <h2 class="page_break_before" id="abstract">Abstract</h2>
@@ -410,7 +411,7 @@ White background specified to serve as a backdrop for transparent sections of th
 </tbody>
 </table>
 </div>
-<div id="tbl:df77317b-247b-4c18-a86a-16fc09bfab74" class="tablenos">
+<div id="tbl:a55f5a23-c231-41bd-96ab-ea36664fc206" class="tablenos">
 <table id="tbl:">
 <caption><span>Table 3:</span> A table with merged cells using the <code>attributes</code> plugin.
 </caption>
