--- a/v/latest/index.html
+++ b/v/latest/index.html
@@ -7,9 +7,9 @@
   <meta name="author" content="Amirthavarshini Muraleetharan" />
   <meta name="author" content="Thomas Ngare" />
   <meta name="author" content="Kapil Shah" />
-  <meta name="dcterms.date" content="2022-09-11" />
+  <meta name="dcterms.date" content="2022-09-17" />
   <meta name="keywords" content="markdown, publishing, manubot" />
-  <title>Transportation Planning</title>
+  <title>A Machine Learning Based Approach, For Predicting Road Closure Events, Given Data of the US Road Construction and Closure</title>
   <style>
     code{white-space: pre-wrap;}
     span.smallcaps{font-variant: small-caps;}
@@ -108,12 +108,12 @@
   Suggest improvements at https://github.com/manubot/manubot/blob/main/manubot/process/header-includes-template.html
   -->
   <meta name="dc.format" content="text/html" />
-  <meta name="dc.title" content="Transportation Planning" />
-  <meta name="citation_title" content="Transportation Planning" />
-  <meta property="og:title" content="Transportation Planning" />
-  <meta property="twitter:title" content="Transportation Planning" />
-  <meta name="dc.date" content="2022-09-11" />
-  <meta name="citation_publication_date" content="2022-09-11" />
+  <meta name="dc.title" content="A Machine Learning Based Approach, For Predicting Road Closure Events, Given Data of the US Road Construction and Closure" />
+  <meta name="citation_title" content="A Machine Learning Based Approach, For Predicting Road Closure Events, Given Data of the US Road Construction and Closure" />
+  <meta property="og:title" content="A Machine Learning Based Approach, For Predicting Road Closure Events, Given Data of the US Road Construction and Closure" />
+  <meta property="twitter:title" content="A Machine Learning Based Approach, For Predicting Road Closure Events, Given Data of the US Road Construction and Closure" />
+  <meta name="dc.date" content="2022-09-17" />
+  <meta name="citation_publication_date" content="2022-09-17" />
   <meta name="dc.language" content="en-US" />
   <meta name="citation_language" content="en-US" />
   <meta name="dc.relation.ispartof" content="Manubot" />
@@ -121,16 +121,15 @@
   <meta name="citation_journal_title" content="Manubot" />
   <meta name="citation_technical_report_institution" content="Manubot" />
   <meta name="citation_author" content="Amirthavarshini Muraleetharan" />
-  <meta name="citation_author_institution" content="Department of Civil and Environmental Engineering, University of Illinois, Urbana-Champaign" />
+  <meta name="citation_author_institution" content="Department of CEE, University of Illinois Urbana Champaign" />
   <meta name="citation_author_orcid" content="XXXX-XXXX-XXXX-XXXX" />
   <meta name="twitter:creator" content="@NIL" />
   <meta name="citation_author" content="Thomas Ngare" />
-  <meta name="citation_author_institution" content="UIUC" />
+  <meta name="citation_author_institution" content="Department of CEE, University of Illinois Urbana Champaign" />
   <meta name="citation_author_orcid" content="XXXX-XXXX-XXXX-XXXX" />
   <meta name="twitter:creator" content="@johndoe" />
   <meta name="citation_author" content="Kapil Shah" />
-  <meta name="citation_author_institution" content="Civil and Environmental Engineering Department" />
-  <meta name="citation_author_institution" content="UIUC" />
+  <meta name="citation_author_institution" content="Department of CEE, University of Illinois Urbana Champaign" />
   <meta name="citation_author_orcid" content="XXXX-XXXX-XXXX-XXXX" />
   <link rel="canonical" href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/" />
   <meta property="og:url" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/" />
@@ -138,9 +137,9 @@
   <meta name="citation_fulltext_html_url" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/" />
   <meta name="citation_pdf_url" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/manuscript.pdf" />
   <link rel="alternate" type="application/pdf" href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/manuscript.pdf" />
-  <link rel="alternate" type="text/html" href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/01e674c4776143fabb62e829a6216b7fd0555d27/" />
-  <meta name="manubot_html_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/01e674c4776143fabb62e829a6216b7fd0555d27/" />
-  <meta name="manubot_pdf_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/01e674c4776143fabb62e829a6216b7fd0555d27/manuscript.pdf" />
+  <link rel="alternate" type="text/html" href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/be916d3bad406033351c5a3821999aef4ee7f9ce/" />
+  <meta name="manubot_html_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/be916d3bad406033351c5a3821999aef4ee7f9ce/" />
+  <meta name="manubot_pdf_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/be916d3bad406033351c5a3821999aef4ee7f9ce/manuscript.pdf" />
   <meta property="og:type" content="article" />
   <meta property="twitter:card" content="summary_large_image" />
   <link rel="icon" type="image/png" sizes="192x192" href="https://manubot.org/favicon-192x192.png" />
@@ -157,14 +156,14 @@
 </head>
 <body>
 <header id="title-block-header">
-<h1 class="title">Transportation Planning</h1>
+<h1 class="title">A Machine Learning Based Approach, For Predicting Road Closure Events, Given Data of the US Road Construction and Closure</h1>
 </header>
 <p><small><em>
 This manuscript
-(<a href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/01e674c4776143fabb62e829a6216b7fd0555d27/">permalink</a>)
+(<a href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/be916d3bad406033351c5a3821999aef4ee7f9ce/">permalink</a>)
 was automatically generated
-from <a href="https://github.com/uiceds/cee-492-term-project-fall-2022-jakt/tree/01e674c4776143fabb62e829a6216b7fd0555d27">uiceds/cee-492-term-project-fall-2022-jakt@01e674c</a>
-on September 11, 2022.
+from <a href="https://github.com/uiceds/cee-492-term-project-fall-2022-jakt/tree/be916d3bad406033351c5a3821999aef4ee7f9ce">uiceds/cee-492-term-project-fall-2022-jakt@be916d3</a>
+on September 17, 2022.
 </em></small></p>
 <h2 id="authors">Authors</h2>
 <ul>
@@ -176,8 +175,7 @@ on September 11, 2022.
 · <img src="images/twitter.svg" class="inline_icon" alt="Twitter icon" />
 <a href="https://twitter.com/NIL">NIL</a><br>
 <small>
-Department of Civil and Environmental Engineering, University of Illinois, Urbana-Champaign
-· Funded by Grant XXXXXXXX
+Department of CEE, University of Illinois Urbana Champaign
 </small></p></li>
 <li><p><strong>Thomas Ngare</strong><br>
 <img src="images/orcid.svg" class="inline_icon" alt="ORCID icon" />
@@ -187,8 +185,7 @@ Department of Civil and Environmental Engineering, University of Illinois, Urban
 · <img src="images/twitter.svg" class="inline_icon" alt="Twitter icon" />
 <a href="https://twitter.com/johndoe">johndoe</a><br>
 <small>
-UIUC
-· Funded by Grant XXXXXXXX
+Department of CEE, University of Illinois Urbana Champaign
 </small></p></li>
 <li><p><strong>Kapil Shah</strong><br>
 <img src="images/orcid.svg" class="inline_icon" alt="ORCID icon" />
@@ -196,8 +193,7 @@ UIUC
 · <img src="images/github.svg" class="inline_icon" alt="GitHub icon" />
 <a href="https://github.com/kapilrs2">kapilrs2</a><br>
 <small>
-Civil and Environmental Engineering Department; UIUC
-· Funded by Grant XXXXXXX
+Department of CEE, University of Illinois Urbana Champaign
 </small></p></li>
 </ul>
 <h2 class="page_break_before" id="abstract">Abstract</h2>
@@ -449,7 +445,7 @@ White background specified to serve as a backdrop for transparent sections of th
 </tbody>
 </table>
 </div>
-<div id="tbl:7f284c6d-9894-4e27-ae75-b75f1198897a" class="tablenos">
+<div id="tbl:84def198-e21a-4ace-99e8-636f2d1077b9" class="tablenos">
 <table id="tbl:">
 <caption><span>Table 3:</span> A table with merged cells using the <code>attributes</code> plugin.
 </caption>
