--- a/v/latest/index.html
+++ b/v/latest/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="Kapil Shah" />
   <meta name="dcterms.date" content="2022-09-17" />
   <meta name="keywords" content="markdown, publishing, manubot" />
-  <title>A Machine Learning Based Approach, For Predicting Road Closure Events, Given Data of the US Road Construction and Closure</title>
+  <title>CEE498 DS - Data Science for CEE - Fall 2022</title>
   <style>
     code{white-space: pre-wrap;}
     span.smallcaps{font-variant: small-caps;}
@@ -108,10 +108,10 @@
   Suggest improvements at https://github.com/manubot/manubot/blob/main/manubot/process/header-includes-template.html
   -->
   <meta name="dc.format" content="text/html" />
-  <meta name="dc.title" content="A Machine Learning Based Approach, For Predicting Road Closure Events, Given Data of the US Road Construction and Closure" />
-  <meta name="citation_title" content="A Machine Learning Based Approach, For Predicting Road Closure Events, Given Data of the US Road Construction and Closure" />
-  <meta property="og:title" content="A Machine Learning Based Approach, For Predicting Road Closure Events, Given Data of the US Road Construction and Closure" />
-  <meta property="twitter:title" content="A Machine Learning Based Approach, For Predicting Road Closure Events, Given Data of the US Road Construction and Closure" />
+  <meta name="dc.title" content="CEE498 DS - Data Science for CEE - Fall 2022" />
+  <meta name="citation_title" content="CEE498 DS - Data Science for CEE - Fall 2022" />
+  <meta property="og:title" content="CEE498 DS - Data Science for CEE - Fall 2022" />
+  <meta property="twitter:title" content="CEE498 DS - Data Science for CEE - Fall 2022" />
   <meta name="dc.date" content="2022-09-17" />
   <meta name="citation_publication_date" content="2022-09-17" />
   <meta name="dc.language" content="en-US" />
@@ -131,15 +131,16 @@
   <meta name="citation_author" content="Kapil Shah" />
   <meta name="citation_author_institution" content="Department of CEE, University of Illinois Urbana Champaign" />
   <meta name="citation_author_orcid" content="XXXX-XXXX-XXXX-XXXX" />
+  <meta name="twitter:creator" content="@shkapil12295" />
   <link rel="canonical" href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/" />
   <meta property="og:url" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/" />
   <meta property="twitter:url" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/" />
   <meta name="citation_fulltext_html_url" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/" />
   <meta name="citation_pdf_url" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/manuscript.pdf" />
   <link rel="alternate" type="application/pdf" href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/manuscript.pdf" />
-  <link rel="alternate" type="text/html" href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/be916d3bad406033351c5a3821999aef4ee7f9ce/" />
-  <meta name="manubot_html_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/be916d3bad406033351c5a3821999aef4ee7f9ce/" />
-  <meta name="manubot_pdf_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/be916d3bad406033351c5a3821999aef4ee7f9ce/manuscript.pdf" />
+  <link rel="alternate" type="text/html" href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/8ad03f66fdf9d3331c9b31163da554c4a675896d/" />
+  <meta name="manubot_html_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/8ad03f66fdf9d3331c9b31163da554c4a675896d/" />
+  <meta name="manubot_pdf_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/8ad03f66fdf9d3331c9b31163da554c4a675896d/manuscript.pdf" />
   <meta property="og:type" content="article" />
   <meta property="twitter:card" content="summary_large_image" />
   <link rel="icon" type="image/png" sizes="192x192" href="https://manubot.org/favicon-192x192.png" />
@@ -156,13 +157,13 @@
 </head>
 <body>
 <header id="title-block-header">
-<h1 class="title">A Machine Learning Based Approach, For Predicting Road Closure Events, Given Data of the US Road Construction and Closure</h1>
+<h1 class="title">CEE498 DS - Data Science for CEE - Fall 2022</h1>
 </header>
 <p><small><em>
 This manuscript
-(<a href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/be916d3bad406033351c5a3821999aef4ee7f9ce/">permalink</a>)
+(<a href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/8ad03f66fdf9d3331c9b31163da554c4a675896d/">permalink</a>)
 was automatically generated
-from <a href="https://github.com/uiceds/cee-492-term-project-fall-2022-jakt/tree/be916d3bad406033351c5a3821999aef4ee7f9ce">uiceds/cee-492-term-project-fall-2022-jakt@be916d3</a>
+from <a href="https://github.com/uiceds/cee-492-term-project-fall-2022-jakt/tree/8ad03f66fdf9d3331c9b31163da554c4a675896d">uiceds/cee-492-term-project-fall-2022-jakt@8ad03f6</a>
 on September 17, 2022.
 </em></small></p>
 <h2 id="authors">Authors</h2>
@@ -171,7 +172,7 @@ on September 17, 2022.
 <img src="images/orcid.svg" class="inline_icon" alt="ORCID icon" />
 <a href="https://orcid.org/XXXX-XXXX-XXXX-XXXX">XXXX-XXXX-XXXX-XXXX</a>
 · <img src="images/github.svg" class="inline_icon" alt="GitHub icon" />
-<a href="https://github.com/Amirthavarshini246">Amirthavarshini246</a>
+<a href="https://github.com/amirthavarshini246">amirthavarshini246</a>
 · <img src="images/twitter.svg" class="inline_icon" alt="Twitter icon" />
 <a href="https://twitter.com/NIL">NIL</a><br>
 <small>
@@ -191,7 +192,9 @@ Department of CEE, University of Illinois Urbana Champaign
 <img src="images/orcid.svg" class="inline_icon" alt="ORCID icon" />
 <a href="https://orcid.org/XXXX-XXXX-XXXX-XXXX">XXXX-XXXX-XXXX-XXXX</a>
 · <img src="images/github.svg" class="inline_icon" alt="GitHub icon" />
-<a href="https://github.com/kapilrs2">kapilrs2</a><br>
+<a href="https://github.com/kapilrs2">kapilrs2</a>
+· <img src="images/twitter.svg" class="inline_icon" alt="Twitter icon" />
+<a href="https://twitter.com/shkapil12295">shkapil12295</a><br>
 <small>
 Department of CEE, University of Illinois Urbana Champaign
 </small></p></li>
@@ -200,9 +203,8 @@ Department of CEE, University of Illinois Urbana Champaign
 <p>Introduction to transportation planning
 UNIVERSITY OF ILLINOIS AT URBANA-CHAMPAIGN
 DEPARTMENT OF CIVIL AND ENVIRONMENTAL ENGINEERING</p>
-<p>CEE498 DS – Data Science for CEE - Fall 2022</p>
-<p>Term Project Proposal
-A Machine Learning Based Approach, For Predicting Road Closure Events, Given Data of the US Road Construction and Closure
+<p>CEE492 DS – Data Science for CEE - Fall 2022</p>
+<p>title: “A Machine Learning Based Approach, For Predicting Road Closure Events, Given Data of the US Road Construction and Closure”
 Amirthavarshini Muraleetharan1, Kapil Shah2, Thomas Ngare Matiki3
 A nationwide dataset of road construction and closure events, including data from all 49 US states is chosen for the project. The roadwork included in this dataset’s construction events ranges from minor paving repairs to significant undertakings that might take months to complete. Several APIs that provide streaming traffic incident (or event) data are used to collect the data between January 2016 and December 2021. These APIs transmit traffic information gathered by several organizations, including the US and state departments of transportation, law enforcement organizations, traffic cameras, and traffic sensors embedded in the road networks. The number of construction and shutdown records in this dataset currently stands at roughly 6.2 million.
 In general, this dataset can be used for a wide range of applications, including the prediction of short- and long-term road construction, the prediction of road closures, the study of the life cycle of road construction, the development of insights to help city planners choose construction sites wisely with the most negligible negative impact on traffic flow, and the investigation of the influence of precipitation or other environmental stimuli on the need for road work. The dataset is being updated on an annual basis. The data will be obtained from US Road Construction and Closures (2016 - 2021), Kaggle, and it is available in CSV format. Presently, the dataset contains 6,170,627 observations comprising of features like Construction severity, Latitude and longitude, Precipitation, Traffic signal and many such taking a total of 47 columns. Table 1 elaborates the specifics of this data set.</p>
@@ -445,7 +447,7 @@ White background specified to serve as a backdrop for transparent sections of th
 </tbody>
 </table>
 </div>
-<div id="tbl:84def198-e21a-4ace-99e8-636f2d1077b9" class="tablenos">
+<div id="tbl:c8ab899e-1a95-40e0-9e44-9ba7fd10d806" class="tablenos">
 <table id="tbl:">
 <caption><span>Table 3:</span> A table with merged cells using the <code>attributes</code> plugin.
 </caption>
