changes1 [ci skip]
This build is based on
https://github.com/uiceds/cee-492-term-project-fall-2022-jakt/commit/7b55e42035a547665f314fc76062e3f40f3b1f44.

This commit was created by the following CI build and job:
https://github.com/uiceds/cee-492-term-project-fall-2022-jakt/commit/7b55e42035a547665f314fc76062e3f40f3b1f44/checks
https://github.com/uiceds/cee-492-term-project-fall-2022-jakt/runs/3075553150

--- a/manuscript.html
+++ b/manuscript.html
@@ -138,9 +138,9 @@
   <meta name="citation_fulltext_html_url" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/" />
   <meta name="citation_pdf_url" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/manuscript.pdf" />
   <link rel="alternate" type="application/pdf" href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/manuscript.pdf" />
-  <link rel="alternate" type="text/html" href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/0424725c12a4ac6814cf1105a3b038b0e9c2eeb3/" />
-  <meta name="manubot_html_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/0424725c12a4ac6814cf1105a3b038b0e9c2eeb3/" />
-  <meta name="manubot_pdf_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/0424725c12a4ac6814cf1105a3b038b0e9c2eeb3/manuscript.pdf" />
+  <link rel="alternate" type="text/html" href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/7b55e42035a547665f314fc76062e3f40f3b1f44/" />
+  <meta name="manubot_html_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/7b55e42035a547665f314fc76062e3f40f3b1f44/" />
+  <meta name="manubot_pdf_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/7b55e42035a547665f314fc76062e3f40f3b1f44/manuscript.pdf" />
   <meta property="og:type" content="article" />
   <meta property="twitter:card" content="summary_large_image" />
   <link rel="icon" type="image/png" sizes="192x192" href="https://manubot.org/favicon-192x192.png" />
@@ -161,9 +161,9 @@
 </header>
 <p><small><em>
 This manuscript
-(<a href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/0424725c12a4ac6814cf1105a3b038b0e9c2eeb3/">permalink</a>)
+(<a href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/7b55e42035a547665f314fc76062e3f40f3b1f44/">permalink</a>)
 was automatically generated
-from <a href="https://github.com/uiceds/cee-492-term-project-fall-2022-jakt/tree/0424725c12a4ac6814cf1105a3b038b0e9c2eeb3">uiceds/cee-492-term-project-fall-2022-jakt@0424725</a>
+from <a href="https://github.com/uiceds/cee-492-term-project-fall-2022-jakt/tree/7b55e42035a547665f314fc76062e3f40f3b1f44">uiceds/cee-492-term-project-fall-2022-jakt@7b55e42</a>
 on September 18, 2022.
 </em></small></p>
 <h2 id="authors">Authors</h2>
@@ -200,8 +200,8 @@ Department of CEE, University of Illinois Urbana Champaign
 </small></p></li>
 </ul>
 <h2 class="page_break_before" id="abstract">Abstract</h2>
-<p><strong>Bold</strong> <strong>ABCD</strong></p>
-<p><span class="semibold">Semi-bold “A Machine Learning Based Approach, For Predicting Road Closure Events, Given Data of the US Road Construction and Closure”</span>
+<p><strong>ABCD</strong></p>
+<p><span class="semibold">“A Machine Learning Based Approach, For Predicting Road Closure Events, Given Data of the US Road Construction and Closure”</span>
 Amirthavarshini Muraleetharan1, Kapil Shah2, Thomas Ngare Matiki3
 A nationwide dataset of road construction and closure events, including data from all 49 US states is chosen for the project. The roadwork included in this dataset’s construction events ranges from minor paving repairs to significant undertakings that might take months to complete. Several APIs that provide streaming traffic incident (or event) data are used to collect the data between January 2016 and December 2021. These APIs transmit traffic information gathered by several organizations, including the US and state departments of transportation, law enforcement organizations, traffic cameras, and traffic sensors embedded in the road networks. The number of construction and shutdown records in this dataset currently stands at roughly 6.2 million.
 In general, this dataset can be used for a wide range of applications, including the prediction of short- and long-term road construction, the prediction of road closures, the study of the life cycle of road construction, the development of insights to help city planners choose construction sites wisely with the most negligible negative impact on traffic flow, and the investigation of the influence of precipitation or other environmental stimuli on the need for road work. The dataset is being updated on an annual basis. The data will be obtained from US Road Construction and Closures (2016 - 2021), Kaggle, and it is available in CSV format. Presently, the dataset contains 6,170,627 observations comprising of features like Construction severity, Latitude and longitude, Precipitation, Traffic signal and many such taking a total of 47 columns. Table 1 elaborates the specifics of this data set.</p>
@@ -444,7 +444,7 @@ White background specified to serve as a backdrop for transparent sections of th
 </tbody>
 </table>
 </div>
-<div id="tbl:668aff58-6c33-4e85-a842-b49de65fed32" class="tablenos">
+<div id="tbl:e69f6b86-1fcb-4fa0-8527-fcff1a67fb66" class="tablenos">
 <table id="tbl:">
 <caption><span>Table 3:</span> A table with merged cells using the <code>attributes</code> plugin.
 </caption>
