--- a/manuscript.html
+++ b/manuscript.html
@@ -138,9 +138,9 @@
   <meta name="citation_fulltext_html_url" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/" />
   <meta name="citation_pdf_url" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/manuscript.pdf" />
   <link rel="alternate" type="application/pdf" href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/manuscript.pdf" />
-  <link rel="alternate" type="text/html" href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/9f099672572dc0924212d9ac987d9b2aa65b3184/" />
-  <meta name="manubot_html_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/9f099672572dc0924212d9ac987d9b2aa65b3184/" />
-  <meta name="manubot_pdf_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/9f099672572dc0924212d9ac987d9b2aa65b3184/manuscript.pdf" />
+  <link rel="alternate" type="text/html" href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/725f4e7bc751b216b5a8dc643dd61e98ee3d2d2e/" />
+  <meta name="manubot_html_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/725f4e7bc751b216b5a8dc643dd61e98ee3d2d2e/" />
+  <meta name="manubot_pdf_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/725f4e7bc751b216b5a8dc643dd61e98ee3d2d2e/manuscript.pdf" />
   <meta property="og:type" content="article" />
   <meta property="twitter:card" content="summary_large_image" />
   <link rel="icon" type="image/png" sizes="192x192" href="https://manubot.org/favicon-192x192.png" />
@@ -161,9 +161,9 @@
 </header>
 <p><small><em>
 This manuscript
-(<a href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/9f099672572dc0924212d9ac987d9b2aa65b3184/">permalink</a>)
+(<a href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/725f4e7bc751b216b5a8dc643dd61e98ee3d2d2e/">permalink</a>)
 was automatically generated
-from <a href="https://github.com/uiceds/cee-492-term-project-fall-2022-jakt/tree/9f099672572dc0924212d9ac987d9b2aa65b3184">uiceds/cee-492-term-project-fall-2022-jakt@9f09967</a>
+from <a href="https://github.com/uiceds/cee-492-term-project-fall-2022-jakt/tree/725f4e7bc751b216b5a8dc643dd61e98ee3d2d2e">uiceds/cee-492-term-project-fall-2022-jakt@725f4e7</a>
 on September 18, 2022.
 </em></small></p>
 <h2 id="authors">Authors</h2>
@@ -209,6 +209,108 @@ In general, this dataset can be used for a wide range of applications, including
 <p>To achieve this goal, data wrangling will be performed. The essential data frames for the study will be extracted from the original dataset followed by Exploratory Analysis. Exploratory analysis will enable us to drive insights by forming a pattern for better visualization and exploration. be performed to make sense of the data and visualize them for better exploration. Based on the analysis, a classification model will be developed to predict the class or category for the data or draw a conclusion to the input data given for training. The developed model will be tested for various conditions.</p>
 <div class="line-block"><em>Features</em> | ID | Severity |<br />
 <em>Description</em> | Unique | ABCD |</div>
+<div id="tbl:98cb1137-cef2-4ff9-94d8-886eebd04b53" class="tablenos">
+<table id="tbl:">
+<caption><span>Table 1:</span> A table with merged cells using the <code>attributes</code> plugin.
+</caption>
+<thead>
+<tr class="header">
+<th style="text-align: center;"></th>
+<th style="text-align: center;"><strong>Colors</strong> <!-- $colspan="2" --></th>
+<th style="text-align: center;"></th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td style="text-align: center;"><strong>Size</strong></td>
+<td style="text-align: center;"><strong>Text Color</strong></td>
+<td style="text-align: center;"><strong>Background Color</strong></td>
+</tr>
+<tr class="even">
+<td style="text-align: center;">big</td>
+<td style="text-align: center;">blue</td>
+<td style="text-align: center;">orange</td>
+</tr>
+<tr class="odd">
+<td style="text-align: center;">small</td>
+<td style="text-align: center;">black</td>
+<td style="text-align: center;">white</td>
+</tr>
+</tbody>
+</table>
+</div>
+<div id="tbl:bowling-scores" class="tablenos">
+<table id="tbl:bowling-scores">
+<caption><span>Table 2:</span> A table with a top caption and specified relative column widths.
+</caption>
+<thead>
+<tr class="header">
+<th style="text-align: left;"><em>Bowling Scores</em></th>
+<th style="text-align: center;">Jane</th>
+<th style="text-align: center;">John</th>
+<th style="text-align: center;">Alice</th>
+<th style="text-align: center;">Bob</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td style="text-align: left;">Game 1</td>
+<td style="text-align: center;">150</td>
+<td style="text-align: center;">187</td>
+<td style="text-align: center;">210</td>
+<td style="text-align: center;">105</td>
+</tr>
+<tr class="even">
+<td style="text-align: left;">Game 2</td>
+<td style="text-align: center;">98</td>
+<td style="text-align: center;">202</td>
+<td style="text-align: center;">197</td>
+<td style="text-align: center;">102</td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;">Game 3</td>
+<td style="text-align: center;">123</td>
+<td style="text-align: center;">180</td>
+<td style="text-align: center;">238</td>
+<td style="text-align: center;">134</td>
+</tr>
+</tbody>
+</table>
+</div>
+<table>
+<colgroup>
+<col style="width: 5%" />
+<col style="width: 20%" />
+<col style="width: 19%" />
+<col style="width: 19%" />
+<col style="width: 34%" />
+</colgroup>
+<thead>
+<tr class="header">
+<th style="text-align: left;"></th>
+<th style="text-align: left;">Digits 1-33</th>
+<th style="text-align: left;">Digits 34-66</th>
+<th style="text-align: left;">Digits 67-99</th>
+<th style="text-align: left;">Ref.</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td style="text-align: left;">pi</td>
+<td style="text-align: left;">3.14159265358979323846264338327950</td>
+<td style="text-align: left;">288419716939937510582097494459230</td>
+<td style="text-align: left;">781640628620899862803482534211706</td>
+<td style="text-align: left;"><a href="https://www.piday.org/million/"><code>piday.org</code></a></td>
+</tr>
+<tr class="even">
+<td style="text-align: left;">e</td>
+<td style="text-align: left;">2.71828182845904523536028747135266</td>
+<td style="text-align: left;">249775724709369995957496696762772</td>
+<td style="text-align: left;">407663035354759457138217852516642</td>
+<td style="text-align: left;"><a href="https://apod.nasa.gov/htmltest/gifcity/e.2mil"><code>nasa.gov</code></a></td>
+</tr>
+</tbody>
+</table>
 <p>Table 1: Description of Undertaking Dataset
 Features Description
 ID Unique identifier of construction record
@@ -318,7 +420,7 @@ Manubot plugins provide easier, more convenient visualization of and navigation 
 <p>Figure <a href="#fig:wide-image">2</a></p>
 <p>Figure <a href="#fig:tall-image">3</a></p>
 <p>Figure <a href="#fig:vector-image">4</a></p>
-<p>Table <a href="#tbl:bowling-scores">1</a></p>
+<p>Table <a href="#tbl:bowling-scores">3</a></p>
 <p>Equation <a href="#eq:regular-equation">1</a></p>
 <p>Equation <a href="#eq:long-equation">2</a></p>
 <h2 id="quotes-and-code">Quotes and code</h2>
@@ -372,7 +474,7 @@ White background specified to serve as a backdrop for transparent sections of th
 <h2 id="tables">Tables</h2>
 <div id="tbl:bowling-scores" class="tablenos">
 <table id="tbl:bowling-scores">
-<caption><span>Table 1:</span> A table with a top caption and specified relative column widths.
+<caption><span>Table 3:</span> A table with a top caption and specified relative column widths.
 </caption>
 <thead>
 <tr class="header">
@@ -410,7 +512,7 @@ White background specified to serve as a backdrop for transparent sections of th
 </div>
 <div id="tbl:constant-digits" class="tablenos">
 <table id="tbl:constant-digits">
-<caption><span>Table 2:</span> A table too wide to fit within page.
+<caption><span>Table 4:</span> A table too wide to fit within page.
 </caption>
 <colgroup>
 <col style="width: 5%" />
@@ -446,9 +548,9 @@ White background specified to serve as a backdrop for transparent sections of th
 </tbody>
 </table>
 </div>
-<div id="tbl:5b5f1135-955c-4358-a41c-21b312904762" class="tablenos">
+<div id="tbl:177e39b7-493e-47ff-94ef-fb04f7851325" class="tablenos">
 <table id="tbl:">
-<caption><span>Table 3:</span> A table with merged cells using the <code>attributes</code> plugin.
+<caption><span>Table 5:</span> A table with merged cells using the <code>attributes</code> plugin.
 </caption>
 <thead>
 <tr class="header">
